# VIA

./: README.md  __init__.py  grid_world_example.ipynb  happy_sick_example.ipynb  happy_sick_functions.py  pyproject.toml  via_function.py
tests/: test_27_functions.py  test_27_via.py
value_iteration/: __init__.py  test_27.py  via_function.py
value_iteration/example_functions/: grid_world_functions.py  happy_sick_functions.py
value_iteration/example_functions/.ipynb_checkpoints/: happy_sick_functions-checkpoint.py
value_iteration/happy_sick_example/: happy_sick_functions.py
value_iteration/tests/: test_27.py
