[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1"
maintainers = [
  { name="Maria-Louiza Van den Bergh", email="vandenb2@lancaster.ac.uk" },
]
authors = [
  { name="Maria-Louiza Van den Bergh", email="vandenb2@lancaster.ac.uk" },
]
description = "Perform value iteration, with examples on 2 state healthy or sick scenario and a 2x2 Grid World."
requires-python = ">=3.13.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]